--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@reduxjs/toolkit": "^2.2.7",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
